svn HEAD
 Enhancements:
 * Docs "edit" task will create a document if user specifies a non-existent document.
 * Added --draft flag so that Blogger "post" task can post drafts.
 * Blogger tasks no longer force user to fill out --blog option.

 Bugfixes:
 * Getting events no longer omits or includes events in or out of the given date range, respectively.

version 0.9.2
 Enhancements:
 * Fixes to Debian packaging

version 0.9.1
 Enhancements:
 * Posting photos to an ambiguous album title prompts user to select album, rather than failing.

 Bugfixes:
 * Tasks with no required options do not raise TypeError exceptions.
 * Uploading photos does not raise TypeError exceptions.

version 0.9
 * Initial release