@@ -6,6 +6,7 @@ svn HEAD
 
  Bugfixes:
  * Getting events no longer omits or includes events in or out of the given date range, respectively.
+ * DeprecationWarning no longer appears during docs upload for users with more recent python gdata libraries.
 
 version 0.9.2
  Enhancements:
